--- a/templates/product.html
+++ b/templates/product.html
@@ -420,7 +420,7 @@
 							</a>
 						</li>
 						<li>
-							<a href="#" class="social-link">
+							<a href="#" class="social-lin">
 								<ion-icon name="logo-linkedin"></ion-icon>
 							</a>
 						</li>
