--- a/templates/index.html
+++ b/templates/index.html
@@ -469,17 +469,20 @@
 		<!-- --------------
 			PRODUCTS
 		-------------- -->
+	
 		<div class="container">
 			<div class="product-main">
 				<h2 class="title">Featured Products</h2>
 				<div class="product-grid">
+					
+					{% for product in products %}
 					<div class="showcase">
 						<div class="showcase-banner">
 							<a href="{%url 'prod'%}">
-								<img  class="product-img default" src="assets/products/napa.jpg" alt="napa" width="300">
-								<img  class="product-img hover" src="assets/products/napa.jpg" alt="napa" width="300">
+								<img  class="product-img default" src="data:image/jpeg;base64,{{ product.p_image }}" alt="{{ product.p_name }}" width="300">
+								<img  class="product-img hover" src="data:image/jpeg;base64,{{ product.p_image }}" alt="{{ product.p_name }}" width="300">
 							</a>
-							<p class="showcase-badge">15%</p>
+							<p class="showcase-badge">{{ product.p_discount|floatformat:"2" }}%</p>
 
 							<div class="showcase-actions">
 								<button class="btn-action">
@@ -490,460 +493,27 @@
 								</button>
 							</div>
 						</div>
-
+			
 						<div class="showcase-content">
-							<a href="{%url 'prod'%}" class="showcase-category">Napa</a>
+							<a href="{%url 'prod'%}" class="showcase-category">{{ product.p_name }}</a>
 
 							<a href="{%url 'prod'%}">
-								<h3 class="showcase-title">Napa</h3>
+								<h3 class="showcase-title">{{ product.p_category }}</h3>
 							</a>
+							
 							<div class="price-box">
-								<p class="price">৳610.00</p>
-								<del>৳700.00</del>
+						
+                             <p class="price">৳{{ product.discounted_price|floatformat:"2"}}</p>
+ 
+								<del>{{ product.p_price|floatformat:"2" }}</del>
 							</div>
 						</div>
+					
 					</div>
-					<div class="showcase">
-						<div class="showcase-banner">
-							<a href="{%url 'prod'%}">
-								<img  class="product-img default" src="assets/products/napaextend.jpg" alt="napaextend" width="300">
-								<img  class="product-img hover" src="assets/products/napaextend.jpg" alt="napaextend" width="300">
-							</a>
-							<p class="showcase-badge">15%</p>
-
-							<div class="showcase-actions">
-								<button class="btn-action">
-									<ion-icon name="heart-outline"></ion-icon>
-								</button>
-								<button class="btn-action">
-									<ion-icon name="bag-outline"></ion-icon>
-								</button>
-							</div>
-						</div>
-
-						<div class="showcase-content">
-							<a href="{%url 'prod'%}" class="showcase-category">Napa Extend</a>
-
-							<a href="{%url 'prod'%}">
-								<h3 class="showcase-title">Napa Extend</h3>
-							</a>
-							<div class="price-box">
-								<p class="price">৳240.00</p>
-								<del>৳276.00</del>
-							</div>
-						</div>
-					</div>
-					<div class="showcase">
-						<div class="showcase-banner">
-							<a href="{%url 'prod'%}">
-								<img class="product-img default" src="assets/products/napaextra.jpg" alt="napaextra" width="300">
-								<img class="product-img hover" src="assets/products/napaextra.jpg" alt="napaextra" width="300">
-							</a>
-							<p class="showcase-badge">15%</p>
-
-							<div class="showcase-actions">
-								<button class="btn-action">
-									<ion-icon name="heart-outline"></ion-icon>
-								</button>
-								<button class="btn-action">
-									<ion-icon name="bag-outline"></ion-icon>
-								</button>
-							</div>
-						</div>
-
-						<div class="showcase-content">
-							<a href="#" class="showcase-category">Napa</a>
-
-							<a href="#">
-								<h3 class="showcase-title">Napa</h3>
-							</a>
-							<div class="price-box">
-								<p class="price">৳610.00</p>
-								<del>৳700.00</del>
-							</div>
-						</div>
-					</div>
-					<div class="showcase">
-						<div class="showcase-banner">
-							<a href="{%url 'prod'%}">
-								<img  class="product-img default" src="assets/products/napasyrup.jpg" alt="napasyrup" width="300">
-								<img  class="product-img hover" src="assets/products/napasyrup.jpg" alt="napasyrup" width="300">
-							</a>
-							<p class="showcase-badge">15%</p>
-
-							<div class="showcase-actions">
-								<button class="btn-action">
-									<ion-icon name="heart-outline"></ion-icon>
-								</button>
-								<button class="btn-action">
-									<ion-icon name="bag-outline"></ion-icon>
-								</button>
-							</div>
-						</div>
-
-						<div class="showcase-content">
-							<a href="#" class="showcase-category">Napa Extra</a>
-
-							<a href="#">
-								<h3 class="showcase-title">Napa Extra</h3>
-							</a>
-							<div class="price-box">
-								<p class="price">৳610.00</p>
-								<del>৳700.00</del>
-							</div>
-						</div>
-					</div>
-					<div class="showcase">
-						<div class="showcase-banner">
-							<img  class="product-img default" src="assets/products/napa.jpg" alt="napa" width="300">
-							<img  class="product-img hover" src="assets/products/napa.jpg" alt="napa" width="300">
-
-							<p class="showcase-badge">15%</p>
-
-							<div class="showcase-actions">
-								<button class="btn-action">
-									<ion-icon name="heart-outline"></ion-icon>
-								</button>
-								<button class="btn-action">
-									<ion-icon name="bag-outline"></ion-icon>
-								</button>
-							</div>
-						</div>
-
-						<div class="showcase-content">
-							<a href="#" class="showcase-category">Napa Syrup</a>
-
-							<a href="#">
-								<h3 class="showcase-title">Napa Syrup</h3>
-							</a>
-							<div class="price-box">
-								<p class="price">৳610.00</p>
-								<del>৳700.00</del>
-							</div>
-						</div>
-					</div>
-					<div class="showcase">
-						<div class="showcase-banner">
-							<img  class="product-img default" src="assets/products/napa.jpg" alt="napa" width="300">
-							<img  class="product-img hover" src="assets/products/napa.jpg" alt="napa" width="300">
-
-							<p class="showcase-badge">15%</p>
-
-							<div class="showcase-actions">
-								<button class="btn-action">
-									<ion-icon name="heart-outline"></ion-icon>
-								</button>
-								<button class="btn-action">
-									<ion-icon name="bag-outline"></ion-icon>
-								</button>
-							</div>
-						</div>
-
-						<div class="showcase-content">
-							<a href="#" class="showcase-category">Napa</a>
-
-							<a href="#">
-								<h3 class="showcase-title">Napa</h3>
-							</a>
-							<div class="price-box">
-								<p class="price">৳610.00</p>
-								<del>৳700.00</del>
-							</div>
-						</div>
-					</div>
-					<div class="showcase">
-						<div class="showcase-banner">
-							<img  class="product-img default" src="assets/products/napa.jpg" alt="napa" width="300">
-							<img  class="product-img hover" src="assets/products/napa.jpg" alt="napa" width="300">
-
-							<p class="showcase-badge">15%</p>
-
-							<div class="showcase-actions">
-								<button class="btn-action">
-									<ion-icon name="heart-outline"></ion-icon>
-								</button>
-								<button class="btn-action">
-									<ion-icon name="bag-outline"></ion-icon>
-								</button>
-							</div>
-						</div>
-
-						<div class="showcase-content">
-							<a href="#" class="showcase-category">Napa</a>
-
-							<a href="#">
-								<h3 class="showcase-title">Napa</h3>
-							</a>
-							<div class="price-box">
-								<p class="price">৳610.00</p>
-								<del>৳700.00</del>
-							</div>
-						</div>
-					</div>
-					<div class="showcase">
-						<div class="showcase-banner">
-							<img  class="product-img default" src="assets/products/napa.jpg" alt="napa" width="300">
-							<img  class="product-img hover" src="assets/products/napa.jpg" alt="napa" width="300">
-
-							<p class="showcase-badge">15%</p>
-
-							<div class="showcase-actions">
-								<button class="btn-action">
-									<ion-icon name="heart-outline"></ion-icon>
-								</button>
-								<button class="btn-action">
-									<ion-icon name="bag-outline"></ion-icon>
-								</button>
-							</div>
-						</div>
-
-						<div class="showcase-content">
-							<a href="#" class="showcase-category">Napa</a>
-
-							<a href="#">
-								<h3 class="showcase-title">Napa</h3>
-							</a>
-							<div class="price-box">
-								<p class="price">৳610.00</p>
-								<del>৳700.00</del>
-							</div>
-						</div>
-					</div>
-					<div class="showcase">
-						<div class="showcase-banner">
-							<img  class="product-img default" src="assets/products/napa.jpg" alt="napa" width="300">
-							<img  class="product-img hover" src="assets/products/napa.jpg" alt="napa" width="300">
-
-							<p class="showcase-badge">15%</p>
-
-							<div class="showcase-actions">
-								<button class="btn-action">
-									<ion-icon name="heart-outline"></ion-icon>
-								</button>
-								<button class="btn-action">
-									<ion-icon name="bag-outline"></ion-icon>
-								</button>
-							</div>
-						</div>
-
-						<div class="showcase-content">
-							<a href="#" class="showcase-category">Napa Syrup</a>
-
-							<a href="#">
-								<h3 class="showcase-title">Napa Syrup</h3>
-							</a>
-							<div class="price-box">
-								<p class="price">৳610.00</p>
-								<del>৳700.00</del>
-							</div>
-						</div>
-					</div>
-					<div class="showcase">
-						<div class="showcase-banner">
-							<img  class="product-img default" src="assets/products/napa.jpg" alt="napa" width="300">
-							<img  class="product-img hover" src="assets/products/napa.jpg" alt="napa" width="300">
-
-							<p class="showcase-badge">15%</p>
-
-							<div class="showcase-actions">
-								<button class="btn-action">
-									<ion-icon name="heart-outline"></ion-icon>
-								</button>
-								<button class="btn-action">
-									<ion-icon name="bag-outline"></ion-icon>
-								</button>
-							</div>
-						</div>
-
-						<div class="showcase-content">
-							<a href="#" class="showcase-category">Napa</a>
-
-							<a href="#">
-								<h3 class="showcase-title">Napa</h3>
-							</a>
-							<div class="price-box">
-								<p class="price">৳610.00</p>
-								<del>৳700.00</del>
-							</div>
-						</div>
-					</div>
-					<div class="showcase">
-						<div class="showcase-banner">
-							<img  class="product-img default" src="assets/products/napa.jpg" alt="napa" width="300">
-							<img  class="product-img hover" src="assets/products/napa.jpg" alt="napa" width="300">
-
-							<p class="showcase-badge">15%</p>
-
-							<div class="showcase-actions">
-								<button class="btn-action">
-									<ion-icon name="heart-outline"></ion-icon>
-								</button>
-								<button class="btn-action">
-									<ion-icon name="bag-outline"></ion-icon>
-								</button>
-							</div>
-						</div>
-
-						<div class="showcase-content">
-							<a href="#" class="showcase-category">Napa</a>
-
-							<a href="#">
-								<h3 class="showcase-title">Napa</h3>
-							</a>
-							<div class="price-box">
-								<p class="price">৳610.00</p>
-								<del>৳700.00</del>
-							</div>
-						</div>
-					</div>
-					<div class="showcase">
-						<div class="showcase-banner">
-							<img  class="product-img default" src="assets/products/napa.jpg" alt="napa" width="300">
-							<img  class="product-img hover" src="assets/products/napa.jpg" alt="napa" width="300">
-
-							<p class="showcase-badge">15%</p>
-
-							<div class="showcase-actions">
-								<button class="btn-action">
-									<ion-icon name="heart-outline"></ion-icon>
-								</button>
-								<button class="btn-action">
-									<ion-icon name="bag-outline"></ion-icon>
-								</button>
-							</div>
-						</div>
-
-						<div class="showcase-content">
-							<a href="#" class="showcase-category">Napa</a>
-
-							<a href="#">
-								<h3 class="showcase-title">Napa</h3>
-							</a>
-							<div class="price-box">
-								<p class="price">৳610.00</p>
-								<del>৳700.00</del>
-							</div>
-						</div>
-					</div>
-					<div class="showcase">
-						<div class="showcase-banner">
-							<img  class="product-img default" src="assets/products/napa.jpg" alt="napa" width="300">
-							<img  class="product-img hover" src="assets/products/napa.jpg" alt="napa" width="300">
-
-							<p class="showcase-badge">15%</p>
-
-							<div class="showcase-actions">
-								<button class="btn-action">
-									<ion-icon name="heart-outline"></ion-icon>
-								</button>
-								<button class="btn-action">
-									<ion-icon name="bag-outline"></ion-icon>
-								</button>
-							</div>
-						</div>
-
-						<div class="showcase-content">
-							<a href="#" class="showcase-category">Napa Syrup</a>
-
-							<a href="#">
-								<h3 class="showcase-title">Napa Syrup</h3>
-							</a>
-							<div class="price-box">
-								<p class="price">৳610.00</p>
-								<del>৳700.00</del>
-							</div>
-						</div>
-					</div>
-					<div class="showcase">
-						<div class="showcase-banner">
-							<img  class="product-img default" src="assets/products/napa.jpg" alt="napa" width="300">
-							<img  class="product-img hover" src="assets/products/napa.jpg" alt="napa" width="300">
-
-							<p class="showcase-badge">15%</p>
-
-							<div class="showcase-actions">
-								<button class="btn-action">
-									<ion-icon name="heart-outline"></ion-icon>
-								</button>
-								<button class="btn-action">
-									<ion-icon name="bag-outline"></ion-icon>
-								</button>
-							</div>
-						</div>
-
-						<div class="showcase-content">
-							<a href="#" class="showcase-category">Napa</a>
-
-							<a href="#">
-								<h3 class="showcase-title">Napa</h3>
-							</a>
-							<div class="price-box">
-								<p class="price">৳610.00</p>
-								<del>৳700.00</del>
-							</div>
-						</div>
-					</div>
-					<div class="showcase">
-						<div class="showcase-banner">
-							<img  class="product-img default" src="assets/products/napa.jpg" alt="napa" width="300">
-							<img  class="product-img hover" src="assets/products/napa.jpg" alt="napa" width="300">
-
-							<p class="showcase-badge">15%</p>
-
-							<div class="showcase-actions">
-								<button class="btn-action">
-									<ion-icon name="heart-outline"></ion-icon>
-								</button>
-								<button class="btn-action">
-									<ion-icon name="bag-outline"></ion-icon>
-								</button>
-							</div>
-						</div>
-
-						<div class="showcase-content">
-							<a href="#" class="showcase-category">Napa</a>
-
-							<a href="#">
-								<h3 class="showcase-title">Napa</h3>
-							</a>
-							<div class="price-box">
-								<p class="price">৳610.00</p>
-								<del>৳700.00</del>
-							</div>
-						</div>
-					</div>
-					<div class="showcase">
-						<div class="showcase-banner">
-							<img  class="product-img default" src="assets/products/napa.jpg" alt="napa" width="300">
-							<img  class="product-img hover" src="assets/products/napa.jpg" alt="napa" width="300">
-
-							<p class="showcase-badge">15%</p>
-
-							<div class="showcase-actions">
-								<button class="btn-action">
-									<ion-icon name="heart-outline"></ion-icon>
-								</button>
-								<button class="btn-action">
-									<ion-icon name="bag-outline"></ion-icon>
-								</button>
-							</div>
-						</div>
-
-						<div class="showcase-content">
-							<a href="#" class="showcase-category">Napa</a>
-
-							<a href="#">
-								<h3 class="showcase-title">Napa</h3>
-							</a>
-							<div class="price-box">
-								<p class="price">৳610.00</p>
-								<del>৳700.00</del>
-							</div>
-						</div>
-					</div>
+					{%endfor%}
 				</div>
 			</div>
-		</div>
+
 	</main>
 
 	<footer class="footer">
