--- a/templates/product.html
+++ b/templates/product.html
@@ -61,7 +61,7 @@
 							</button>
 							<img src="assets/products/napa.jpg" alt="napa">
 							<div class="cart-content">
-								<h3>{% product_details.name% }</h3>
+								<h3>{% product_details.p_name% }</h3>
 								<span class="cart-content-price">৳610.00</span>
 								<span class="quantity">qty: 1</span>
 							</div>
@@ -303,8 +303,8 @@
                     <img class="product-img default" src="{% static 'products/napaextra.jpg'%}" alt="napaextra" width="600">
                 </div>
                 <div class="col-sm-6">
-                    <p>Home / {{ product_details.name }}</p>
-                    <h1>{{ product_details.name }}</h1>
+                    <p>Home / {{ product_details.p_name }}</p>
+                    <h1>{{ product_details.p_name }}</h1>
                     <h2>Tablet</h2>
                     <h3>Generics: Paracetamol 500mgCaffeine 65mg</h3>
                     <a href=""><h3>Beximco Pharmaceuticals Ltd.</h3></a>
@@ -330,41 +330,7 @@
                 <h2>Pharmacology</h2>
                 <p>Paracetamol is an analgesic and antipyretic with just a little anti-inflammatory effect. Paracetamol (Acetaminophen) is considered to work largely in the central nervous system (CNS), raising pain threshold by blocking both isoforms of the cyclooxygenase enzymes COX-1, COX-2, and COX3, which are involved in prostaglandin (PG) production. Paracetamol is a para aminophenol derivative that possesses analgesic, antipyretic, and anti-inflammatory effects.  One of the most commonly used, safest, and fastest-acting analgesics is paracetamol.  It is well tolerated and devoid of aspirin's numerous adverse effects.</p>
                 <h2>Dosage & Administration</h2>
-                <p>Tablet/Extra Tablet :<br><br>
-
-                    Adults : 1-2 tablets 3-4 times daily;<br><br>
-                    
-                    Syrup/Suspension :<br>
-                    Adults: 4-8 Measuring spoonful 3-4 times daily;<br><br>
-                    
-                    Children: 6-12 years: 2-4 measuring spoonfuls 3-4 times daily,<br><br>
-                    
-                    1-5 years: 1-2 Measuring spoonful<br>
-                    3-4 times daily, Up to 1 year: 1/2<br>
-                    -1 Measuring spoonful 3-4 times daily.<br><br>
-                    
-                    Pediatric drops :<br><br>
-                    
-                    Neonates & Children :<br><br>
-                    
-                    0-3 months : 0.5 ml,<br><br>
-                    
-                    4-11 months: 1ml,<br><br>
-                    
-                    12-23 months: 1.5 ml,<br><br>
-                    
-                    2-3 years: 2 ml,<br><br>
-                    
-                    4-5 years: 3ml four times<br>
-                    daily or as directed by physicians.<br><br>
-                    
-                    Suppositories :<br><br>
-                    
-                    Children: 1<br><br>
-                    
-                    -5 years: 125-250 mg,<br><br>
-                    
-                    6-12 years: 250-500 mg, up to 4 times daily.</p>
+               
                     <h2>Interaction</h2>
                     <p>Patients taking barbiturates, tricyclic antidepressants, and alcohol may have a reduced ability to metabolize large doses of paracetamol. Alcohol can increase liver toxicity from acetaminophen overdose. Long-term use of oral contraceptives or steroidal contraceptives can induce liver enzymes and may prevent therapeutic levels of paracetamol from being achieved by increasing metabolism or first-pass clearance.</p>
                     <h2>Contradictions</h2>
