--- a/templates/product.html
+++ b/templates/product.html
@@ -353,7 +353,7 @@
 		<div class="footer-top section">
 			<div class="container">
 				<div class="footer-brand">
-					<a href="#" class="logo"><img style="border-radius: 10px;" src="assets/logo.jpg" width="80" alt="logo"></a>
+					<a href="#" class="logo"><img style="border-radius: 10px;" src="{% static 'Favicon.png' %}" width="80" alt="logo"></a>
 					<p class="footer-text">
 						If you have any queries please contact us at <a href="mailto:support@gmail.com" class="link">support@gmail.com</a>
 					</p>
@@ -431,7 +431,7 @@
 				<p class="copyright">
 					&copy; 2023 Made by <a href="#">Team NJ<sup>2</sup>.</a>
 				</p>
-				<img src="assets/payment/payment.png" width="380" height="90" loading="lazy" alt="payment method" class="img">
+				<img src="{% static 'payment/payment.png' %}" width="380" height="90" loading="lazy" alt="payment method" class="img">
 			</div>
 		</div>
 	</footer>
