--- a/templates/product.html
+++ b/templates/product.html
@@ -353,7 +353,7 @@
 	<a href="#top" class="back-top-btn" aria-label="back to top" data-back-top-btn>
 		<ion-icon name="chevron-up" aria-hidden="true"></ion-icon>
 	</a>
-    <script type="text/javascript" src="assets/script.js"></script>
+    <script type="text/javascript" src="{% static 'script.js' %}"></script>
 	<script>
         const plus = document.querySelector(".plus"),
         minus = document.querySelector(".minus"),
