--- a/templates/category-wise.html
+++ b/templates/category-wise.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>medE</title>
 	<link rel="icon" type="image/x-icon" href="{% static 'Favicon.png' %}">
-	<link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'category-wise.css' %}">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
@@ -137,7 +137,7 @@
 						</div>
 					</li>
 					<li class="menu-category">
-						<a href="{%url 'category'%}" class="menu-title">Men's</a>
+						<a href="#" class="menu-title">Men's</a>
 			
 
 					</li>
@@ -216,209 +216,31 @@
 	</header>
 	<main>
 		<!-- --------------
-			BANNER
+			SIDEBAR
 		-------------- -->
-		<div class="banner">
-			<div class="container">
-				<div class="slider-container has-scrollbar">
-					<!-- ------------------------- -->
-					<!-- <div class="slides">
-						<input type="radio" name="radio-btn" id="radio1">
-						<input type="radio" name="radio-btn" id="radio2">
-						<input type="radio" name="radio-btn" id="radio3">
-
-						<div class="slide first"><img src="assets/images/banner-1.jpg" alt="banner1"></div>
-						<div class="slide"><img src="assets/images/banner-2.jpg" alt="banner2"></div>
-						<div class="slide"><img src="assets/images/banner-3.jpg" alt="banner3"></div>
-
-						<div class="navigation-auto">
-							<div class="auto-btn1"></div>
-							<div class="auto-btn2"></div>
-							<div class="auto-btn3"></div>
-						</div>
-					</div>
-					<div class="navigation-manual">
-						<label for="radio1" class="manual-btn"></label>
-						<label for="radio2" class="manual-btn"></label>
-						<label for="radio3" class="manual-btn"></label>
-					</div> -->
-
-					<!-- ------------------------- -->
-					<div class="slider-item">
-						<img class="banner-img" src="{% static 'images/banner-1.jpg' %}" alt="banner-1">
-						<div class="banner-content">
-							<p class="banner-subtitle">Daily Needs</p>
-
-							<h2 class="banner-title">Banner-1</h2>
-
-							<p class="banner-text">Lorem ipsum dolor sit amet.</p>
-
-							<a href="#" class="banner-btn">Consult now</a>
-						</div>
-					</div>
-					<div class="slider-item">
-						<img class="banner-img" src="{% static 'images/banner-2.jpg' %}" alt="banner-1">
-						<div class="banner-content">
-							<p class="banner-subtitle">Daily Needs</p>
-
-							<h2 class="banner-title">Banner-2</h2>
-
-							<p class="banner-text">Lorem ipsum dolor sit amet.</p>
-
-							<a href="#" class="banner-btn">Consult now</a>
-						</div>
-					</div>
-					<div class="slider-item">
-						<img class="banner-img" src="{% static 'images/banner-3.jpg' %}" alt="banner-1">
-						<div class="banner-content">
-							<p class="banner-subtitle">Daily Needs</p>
-
-							<h2 class="banner-title">Banner-3</h2>
-
-							<p class="banner-text">Lorem ipsum dolor sit amet.</p>
-
-							<a href="#" class="banner-btn">Consult now</a>
-						</div>
-					</div>
-				</div>
-
-			</div>
-		</div>
-		<!-- --------------
-			UPLOAD PRESCRIPTION
-		-------------- -->
-		<div class="prescription">
-			<div class="container">
-				<input type="file" id="file-upload" accept="image/*">
-				<label for="file-upload">Upload Prescription</label>
-			</div>
-		</div>
-		<!-- --------------
-			CATEGORY
-		-------------- -->
-		<div class="category">
-			<div class="container">
-				<div class="category-item-container has-scrollbar">
-					<div class="category-item">
-						<div class="category-img-box">
-							<img src="{% static 'cat-icons/syringe.png' %}" alt="syringe-logo" width="30">
-						</div>
-						<div class="category-content-box">
-							<div class="category-content-flex">
-								<h3 class="category-item-title">Medicines</h3>
-								<p class="category-item-amount">(168)</p>
-							</div>
-							<a href="#" class="category-btn">Show all</a>
-						</div>
-					</div>
-					<div class="category-item">
-						<div class="category-img-box">
-							<img src="{% static 'cat-icons/dental.png' %}" alt="dental-logo" width="30">
-						</div>
-						<div class="category-content-box">
-							<div class="category-content-flex">
-								<h3 class="category-item-title">Dental Care</h3>
-								<p class="category-item-amount">(61)</p>
-							</div>
-							<a href="#" class="category-btn">Show all</a>
-						</div>
-					</div>
-					<div class="category-item">
-						<div class="category-img-box">
-							<img src="{% static 'cat-icons/woman.png' %}" alt="woman-logo" width="30">
-						</div>
-						<div class="category-content-box">
-							<div class="category-content-flex">
-								<h3 class="category-item-title">Women's Choice</h3>
-								<p class="category-item-amount">(69)</p>
-							</div>
-							<a href="#" class="category-btn">Show all</a>
-						</div>
-					</div>
-					<div class="category-item">
-						<div class="category-img-box">
-							<img src="{% static 'cat-icons/contraceptive.png' %}" alt="contraceptive-logo" width="30">
-						</div>
-						<div class="category-content-box">
-							<div class="category-content-flex">
-								<h3 class="category-item-title">Sexual Care</h3>
-								<p class="category-item-amount">(38)</p>
-							</div>
-							<a href="#" class="category-btn">Show all</a>
-						</div>
-					</div>
-					<div class="category-item">
-						<div class="category-img-box">
-							<img src="{% static 'cat-icons/baby.png' %}" alt="baby-logo" width="30">
-						</div>
-						<div class="category-content-box">
-							<div class="category-content-flex">
-								<h3 class="category-item-title">Baby Care</h3>
-								<p class="category-item-amount">(124)</p>
-							</div>
-							<a href="#" class="category-btn">Show all</a>
-						</div>
-					</div>
-					<div class="category-item">
-						<div class="category-img-box">
-							<img src="{% static 'cat-icons/diabetic.png' %}" alt="diabetic-logo" width="30">
-						</div>
-						<div class="category-content-box">
-							<div class="category-content-flex">
-								<h3 class="category-item-title">Diabetics Care</h3>
-								<p class="category-item-amount">(57)</p>
-							</div>
-							<a href="#" class="category-btn">Show all</a>
-						</div>
-					</div>
+		<div class="sidebar">
+			<div class="menu-bar">
+				<div class="menu">
+					<ul class="menu-links">
+						<li class="nav-link">
+							<a href="#">
+								<img src="{% static 'cat-icons/syringe.png' %}" alt="syringe-logo" width="30">
+								<h3>Medicines</h3>
+							</a>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</div>
+
 		<!-- --------------
 			PRODUCTS
 		-------------- -->
-	
+		
 		<div class="container">
 			<div class="product-main">
 				<h2 class="title">Featured Products</h2>
-				<div class="product-grid">
-					
-					{% for product in products %}
-					<div class="showcase">
-						<div class="showcase-banner">
-							<a href="{%url 'prod' p_name=product.p_name %}">
-								<img  class="product-img default" src="data:image/jpeg;base64,{{ product.p_image }}" alt="{{ product.p_name }}" width="300">
-								<img  class="product-img hover" src="data:image/jpeg;base64,{{ product.p_image }}" alt="{{ product.p_name }}" width="300">
-							</a>
-							<p class="showcase-badge">{{ product.p_discount|floatformat:"2" }}%</p>
-
-							<div class="showcase-actions">
-								<button class="btn-action">
-									<ion-icon name="heart-outline"></ion-icon>
-								</button>
-								<button class="btn-action">
-									<ion-icon name="bag-outline"></ion-icon>
-								</button>
-							</div>
-						</div>
-			
-						<div class="showcase-content">
-							<a href="{%url 'prod' p_name=product.p_name %}" class="showcase-category">{{ product.p_name }}</a>
-
-							<a href="{%url 'prod' p_name=product.p_name %}">
-								<h3 class="showcase-title">{{ product.p_category }}</h3>
-							</a>
-							
-							<div class="price-box">
-						
-                             <p class="price">৳{{ product.discounted_price|floatformat:"2"}}</p>
- 
-								<del>{{ product.p_price|floatformat:"2" }}</del>
-							</div>
-						</div>
-					
-					</div>
-					{%endfor%}
+				
 				</div>
 			</div>
 
