--- a/static/category-wise.css
+++ b/static/category-wise.css
@@ -263,6 +263,7 @@ body::-webkit-scrollbar-thumb:hover {
 	padding-left: 1rem;
 	font-family: 'poppins', sans-serif;
 	font-weight: 500;
+	font-size: var(--fs-7);
 }
 
 .header-user-actions .shopping-cart .total {
@@ -537,34 +538,156 @@ body::-webkit-scrollbar-thumb:hover {
 
 .sidebar {
 	position: absolute;
-	z-index: -1;
 	margin-bottom: 250px;
 	left: 0;
-	height: 60%;
+	height: 70%;
 	width: 250px;
-	padding: 10px 15px;
-	background: rgb(230, 230, 230);
+	background: rgb(250, 250, 250);
+	border-radius: 10px;
+	box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
 }
 
 .sidebar li {
-	height: 50px;
-	margin-top: 10px;
-	list-style: none;
 	display: flex;
+	height: 50px;
+	width: 100%;
+	margin-top: 10px;
+	padding: 5px 20px;
+	list-style: none;
 	align-items: center;
+}
+.sidebar li:hover {
+	background: rgb(255, 97, 97);
+}
+.sidebar li:hover h3 {
+	color: white;
 }
 
 .sidebar li h3 {
 	color: #4e4e4e;
+	font-size: 18px;
+	margin-bottom: 0;
 }
 
 .sidebar li a {
-	height: 100%;
 	display: flex;
+	height: 100%;
+	width: 100%;
 	align-items: center;
+	justify-content: space-between;
 	text-decoration: none;
+	border-radius: 6px;
+	transition: 0.3s ease;
 }
 
+.backdrop {
+	display: none;
+}
+.backdrop.active {
+	display: block;
+	position: absolute;
+	top: 0;
+	height: 100%;
+	width: 100%;
+	background: rgba(0, 0, 0, 0.2);
+	backdrop-filter: blur(5px);
+	z-index: 5;
+}
+.img-area {
+	display: none;
+}
+.img-area.active{
+	display: flex;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	border-radius: 15px;
+	overflow: hidden;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	z-index: 10;
+}
+.img-area .elem-container {
+	display: flex;
+	background-color: white;
+	border-radius: 15px;
+	padding: 500px 20px 25px 25px;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+.img-area img {
+	display: block;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -70%);
+	border-radius: 15px;
+	margin-bottom: 10px;
+	height: 450px;
+	width: 500px;
+	z-index: 10;
+}
+.img-area .elem-container::before {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	border-radius: 15px;
+	transform: translate(-50%, -70%);
+	content: attr(data-img);
+	height: 450px;
+	width: 500px;
+	background: rgba(0, 0, 0, 0.5);
+	color: white;
+	pointer-events: none;
+	opacity: 0;
+	transition: all 0.3s ease;
+	z-index: 11;
+}
+.img-area .elem-container.active:hover::before {
+	opacity: 1;
+}
+.img-area .times {
+	display: grid;
+	gap: 2px;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+	padding: 10px 0;
+	width: 100%;
+}
+.img-area .times input[type="checkbox"] {
+    display: grid;
+	place-content: center;
+	border: 0px;
+	width: 40px;
+}
+
+.img-area .days {
+	display: grid;
+	gap: 2px;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+	padding: 10px 0;
+	width: 100%;
+}
+.img-area .days input[type="checkbox"] {
+    display: grid;
+	place-content: center;
+	border: 0px;
+	width: 40px;
+}
+.img-area .prescription-upload-btn {
+	display: flex;
+	color: white;
+	font-size: 25px;
+	align-items: center;
+	justify-content: center;
+	height: 70px;
+	width: 100%;
+	margin-top: 10px;
+	border-radius: 10px;
+	background-color: var(--red);
+}
 
 /* ------------------------ */
 /* PRODUCTS */
@@ -904,6 +1027,9 @@ body::-webkit-scrollbar-thumb:hover {
 	
 	.header-user-actions .user-login.active {
 		right: -5%;
+	}
+	.sidebar {
+		display: none;
 	}
 }
 
@@ -1265,8 +1391,19 @@ body::-webkit-scrollbar-thumb:hover {
 	.mobile-navigation-menu  {
 		display: none;
 	}
-
-
+	.sidebar {
+		display: block;
+		height: 60%;
+		width: 13%;
+		min-width: 14%;
+	}
+	.sidebar li h3 {
+		font-size: 1rem;
+	}
+	main .container {
+		width: 80%;
+		margin-left: 15%;
+	}
 	.product-grid {
 		grid-template-columns: repeat(4, 1fr);
 	}
